--- a/Less/selector.less
+++ b/Less/selector.less
@@ -11,21 +11,28 @@
         border-bottom: @white solid 1px;
         padding: 8px 4px;
       }
+      .phone-img{
+        display: none;
+        .thin
+      }
       .selected{
           background: @flag-blue;
       }
+     
     }
     .viz{
       padding: 10px;
       background: @flag-blue;
       display: none;
-      img{
+      max-width:700px;
+      .wide{
         width: 400px;
-        height: auto;
+        //height: 400px;
+        //height: auto;
         width:100%;
-      }
+      } 
     }
     .displayed{
-      display: flex;
+      display: block;
     }  
   }
